# match-drone

./: .gitmodules  README.md
match_models/: install_models.sh
match_models/sdf/match_drohne_lidar/meshes/: Marvin.stl
setup/: fix_Livox-SDK2_make_error.sh  requirements.txt  setup.sh
slam_connect/: CMakeLists.txt  package.xml
slam_connect/config/: livox_params.yaml  my_minimal_display.rviz  odom_config.rviz  slam_params.yaml
slam_connect/description/urdf/: drone.urdf.xacro  drone_core.xacro  lidar.xacro
slam_connect/ergebnisse/simple_flight/: est.txt  evo_stats.txt  gt.txt
slam_connect/launch/: fast_lio2_only.launch.py  new_test.launch.py  px4_only.launch.py  robot_state_publisher.launch.py  test.launch.py
slam_connect/pcds/: forest.pcd  forest_dense_filtered.pcd  ndense_filtered.pcd
slam_diagnostic/: package.xml  setup.cfg  setup.py
slam_diagnostic/resource/: slam_diagnostic
slam_diagnostic/slam_diagnostic/: odom_bridge_node.py  pcd_replay_node.py  slam_eval_node.py  slam_fixers_node.py
